[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/components/PlayerDetectionArea.gd" type="Script" id=1]

[node name="PlayerDetectionArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.639216, 0.180392, 0.180392, 1 )
position = Vector2( 0, -55 )
rotation = -1.5708

[connection signal="body_entered" from="." to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerDetectionArea_body_exited"]
